[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/World.gd" type="Script" id=1]
[ext_resource path="res://fade_in/FadeIn.tscn" type="PackedScene" id=2]
[ext_resource path="res://Mini Scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Mini Scenes/Gold.tscn" type="PackedScene" id=4]
[ext_resource path="res://Mini Scenes/Rock.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Wall_End.png" type="Texture" id=6]
[ext_resource path="res://Assets/Wall_Middle.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 320, 32 )

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="BG" type="Node2D" parent="."]

[node name="Wall_Start" type="Sprite" parent="BG"]
position = Vector2( 1056, 720 )
texture = ExtResource( 6 )

[node name="Wall_Middle" type="Sprite" parent="BG"]
position = Vector2( 1056, 80 )
texture = ExtResource( 7 )

[node name="Wall_Middle2" type="Sprite" parent="BG"]
position = Vector2( 1056, -560 )
texture = ExtResource( 7 )

[node name="Wall_Middle3" type="Sprite" parent="BG"]
position = Vector2( 1056, -1200 )
texture = ExtResource( 7 )

[node name="Wall_Middle4" type="Sprite" parent="BG"]
position = Vector2( 1056, -1840 )
texture = ExtResource( 7 )

[node name="Wall_Middle5" type="Sprite" parent="BG"]
position = Vector2( 1056, -2480 )
texture = ExtResource( 7 )

[node name="Wall_Middle6" type="Sprite" parent="BG"]
position = Vector2( 1056, -3120 )
texture = ExtResource( 7 )

[node name="Wall_Middle7" type="Sprite" parent="BG"]
position = Vector2( 1056, -3760 )
texture = ExtResource( 7 )

[node name="Wall_Middle8" type="Sprite" parent="BG"]
position = Vector2( 1056, -4400 )
texture = ExtResource( 7 )

[node name="Wall_End" type="Sprite" parent="BG"]
position = Vector2( 1056, -5040 )
texture = ExtResource( 6 )
flip_v = true

[node name="Gold" parent="." instance=ExtResource( 4 )]
position = Vector2( 1056, -2400 )

[node name="Rock" parent="." instance=ExtResource( 5 )]
position = Vector2( 1056, -4544 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 1056, 96 )

[node name="FadeIn" parent="Player" instance=ExtResource( 2 )]
visible = false
margin_left = -960.0
margin_top = -544.0
margin_right = 960.0
margin_bottom = 536.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Walls" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Walls"]
polygon = PoolVector2Array( 736, 1024, 736, -5344, 1376, -5344, 1376, 1024, 1632, 1024, 1632, -5632, 480, -5632, 480, 1280, 1360, 1024 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 1056, -4816 )

[node name="Collision" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[connection signal="Gold" from="Player" to="." method="_on_Player_Gold"]
[connection signal="Rock" from="Player" to="." method="_on_Player_Rock"]
[connection signal="fade_finished" from="Player/FadeIn" to="." method="_on_FadeIn_fade_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
